--- a/style.css
+++ b/style.css
@@ -71,7 +71,8 @@ ul .bold-text {
   width: 85%;
   margin: 1rem auto;
   border-radius: 5px;
-  background: rgba(255, 255, 255, 0.2);
+  border: 2px solid rgba(130, 161, 118, 1);
+  background: rgba(255, 255, 255, 0.1);
 }
 
 .timeline {
@@ -191,11 +192,12 @@ header {
 
 .author-info a {
   text-decoration: none;
-  color: red;
+  color: rgba(130, 161, 118, 1);
 }
 
 .author-info a:hover,
 .author-info a:focus {
+  color: red;
   text-decoration: underline;
 }
 
